# stratigram

./: .gitignore  .gitmodules  Makefile  README.md  babel.config.js  package.json  stratiform  tsconfig.json  webpack.config.js
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/scripts/: generate-types
frontend/src/: about.mdx  app.ts  crud-view.ts  data-service.ts  declarations.d.ts  hyper.ts  index.ts  project-form.ts  settings.ts  storage.ts
frontend/src/column/: editor.ts
frontend/src/components/: buttons.ts  index.ts  storage-ui.ts  text-utils.ts
frontend/src/experiments/: mantine-shell.ts
frontend/src/legacy-ui/: app.ts  main.module.styl  settings.ts
frontend/src/model-table/: edit-form.ts  fancy-example.tsx  header.ts  index.ts  main.styl  project-form.ts
frontend/src/pages/: column.ts
frontend/src/styles/: _variables.styl  app.styl  core.styl  page-layouts.styl  text.styl
manager/: pyproject.toml
manager/commands/: psql
manager/stratiform_cli/: __init__.py
platform/: docker-compose.yaml
platform/gateway/: nginx.conf
platform/storage/: Dockerfile
platform/storage_api/: Dockerfile
schema/: 01-core-schema.sql  01-extensions.sql  02-auth.sql  02-storage.sql  03-api-schema.sql  03-core-models.sql  03-storage-system.sql  04-storage-buckets.sql  04-storage-system.sql  05-api-schema.sql  05-storage-triggers.sql  06-api-schema.sql
src/: app.ts  index.ts
src/column/: index.ts
test-data/Moynihan-2019/: insert-data.sql
test-data/Zebra-Nappe-Section-J/: create-temp-tables.sql  insert-data.sql
(+33 files in other folders)
