[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = ""
name = "stratiform-store"
packages = [
  {include = "stratiform_cli"},
]
version = "0.1.0"

[tool.poetry.dependencies]
"macrostrat.database" = "^1.0.2"
"macrostrat.utils" = "^1.0.1"
python = "^3.9"
python-dotenv = "^0.20.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
stratiform = "stratiform_cli:app"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
